Fix: remove icon references (use default)

--- a/package.json
+++ b/package.json
@@ -19,12 +19,10 @@
     "productName": "CLI Setup Wizard",
     "mac": {
       "category": "public.app-category.developer-tools",
-      "target": ["dmg", "zip"],
-      "icon": "assets/icon.icns"
+      "target": ["dmg", "zip"]
     },
     "dmg": {
       "title": "CLI Setup Wizard",
-      "icon": "assets/icon.icns",
       "contents": [
         { "x": 130, "y": 220 },
         { "x": 410, "y": 220, "type": "link", "path": "/Applications" }
